# onlinespy

./: .gitignore  LICENSE.md  README.md  api.py  bot.py  pyproject.toml
static/: index.html  index.js  profile.html  profile.js  style.css
